Bug 386884 - incorrect spacing in export window
Summary: incorrect spacing in export window
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-13 22:52 UTC by uwestoehr
Modified: 2019-01-25 18:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments
Initial export window (33.33 KB, image/jpeg)
2017-11-13 22:52 UTC, uwestoehr
Details
export window with hidden options (23.36 KB, image/jpeg)
2017-11-13 22:52 UTC, uwestoehr
Details
export window with again shown options (31.35 KB, image/jpeg)
2017-11-13 22:53 UTC, uwestoehr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2017-11-13 22:52:31 UTC
Created attachment 108847 [details]
Initial export window

- create a plot
- use the menu File -> Export

Attached is how the export windows looks. You can see that the spacing is not correct since there is too much space.

- now click on "Hide option"

Now the spacing is correct, see attached.

- now click on Show Options

result: now the export window looks correct, see attached.
Comment 1 uwestoehr 2017-11-13 22:52:54 UTC
Created attachment 108848 [details]
export window with hidden options
Comment 2 uwestoehr 2017-11-13 22:53:16 UTC
Created attachment 108849 [details]
export window with again shown options
Comment 3 Alexander Semke 2017-11-14 22:06:06 UTC
Git commit b03eae8c7b7d76baf673d5fb7e622a1bd2209fa5 by Alexander Semke.
Committed on 14/11/2017 at 22:05.
Pushed by asemke into branch 'master'.

Save/restore dialog sizes for ExportSpreadsheetDialog.

M  +15   -6    src/kdefrontend/worksheet/ExportWorksheetDialog.cpp
M  +1    -0    src/kdefrontend/worksheet/ExportWorksheetDialog.h

https://commits.kde.org/labplot/b03eae8c7b7d76baf673d5fb7e622a1bd2209fa5
Comment 4 Alexander Semke 2017-11-14 22:07:33 UTC
For ExportWorksheetDialog it should be fixed now. We have some other dialogs (ExportSpreadsheetDialog, RandomValuesDialog, etc.) that are affected by this problem, too. We need to go through all of them.