Save/restore dialog sizes for ExportSpreadsheetDialog.

BUG: 386884